--- a/package.json
+++ b/package.json
@@ -14,18 +14,21 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^4.3.6",
+    "@angular/animations": "^4.4.6",
+    "@angular/cdk": "^5.0.0-rc.1",
     "@angular/common": "^4.3.6",
     "@angular/compiler": "^4.3.6",
     "@angular/core": "^4.3.6",
     "@angular/forms": "^4.3.6",
     "@angular/http": "^4.3.6",
+    "@angular/material": "^5.0.0-rc.1",
     "@angular/platform-browser": "^4.3.6",
     "@angular/platform-browser-dynamic": "^4.3.6",
     "@angular/platform-server": "^4.3.6",
     "@angular/router": "^4.3.6",
     "core-js": "^2.4.1",
     "immutable": "^3.8.1",
+    "ngx-bootstrap": "^2.0.0-beta.8",
     "rxjs": "^5.4.2",
     "socket.io-client": "^2.0.3",
     "zone.js": "^0.8.14"
